--- a/_data/publications_journals.yml
+++ b/_data/publications_journals.yml
@@ -1,4 +1,4 @@
-- title: "Fast GPU-Based Ray Tracing2"
+- title: "00 Fast GPU-Based Ray Tracing2"
   authors: "Dave Pugmire, Alice Smith"
   journal: "IEEE TVCG"
   year: 2023
