messing with pugs

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ author:
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
   manuscripts:
-    title: 'Journal Articles'    
+    title: 'Journal Articles _config'    
   conferences:
     title: 'Conference Papers'
   books:
