--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,11 +14,8 @@ main:
   - title: "Talks"
     url: /talks/
 
-  #  - title: "Teaching"
-  #    url: /teaching/
-
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Projects"
+    url: /projects/
 
   #  - title: "Blog Posts"
   #    url: /year-archive/
