--- a/_data/publications_books.yml
+++ b/_data/publications_books.yml
@@ -1,5 +1,24 @@
-- title: "2022 review of data-driven plasma science"
-  authors: "Rushil Anirudh et. al"
-  year: 2023
-  bibtex: |
-    @article{2022_review_of_data-driven_plasma_scienc,year={2023}, title={2022 review of data-driven plasma science}, journal={}, author={Rushil Anirudh and Rick Archibald and M Salman Asif and Markus M Becker and Sadruddin Benkadda and Peer-Timo Bremer and Rick HS Bud{\'e} and Choong-Seock Chang and Lei Chen and RM Churchill and Jonathan Citrin and Jim A Gaffney and Ana Gainaru and Walter Gekelman and Tom Gibbs and Satoshi Hamaguchi and Christian Hill and Kelli Humbird and S{\"o}ren Jalas and Satoru Kawaguchi and Gon-Ho Kim and Manuel Kirchen and Scott Klasky and John L Kline and Karl Krushelnick and Bogdan Kustowski and Giovanni Lapenta and Wenting Li and Tammy Ma and Nigel J Mason and Ali Mesbah and Craig Michoski and Todd Munson and Izumi Murakami and Habib N Najm and K Erik J Olofsson and Seolhye Park and J Luc Peterson and Michael Probst and David Pugmire and Brian Sammuli and Kapil Sawlani and Alexander Scheinker and David P Schissel and Rob J Shalloo and Jun Shinagawa and Jaegu Seong and Brian K Spears and Jonathan Tennyson and Jayaraman Thiagarajan and Catalin M Tico{\c s} and Jan Trieschmann and Jan Van Dijk and Brian Van Essen and Peter Ventzek and Haimin Wang and Jason TL Wang and Zhehui Wang and Kristian Wende and Xueqiao Xu and Hiroshi Yamada and Tatsuya Yokoyama and Xinhua Zhang}}
+- title: 'VisIt: An End-User Tool for Visualizing and Analyzing Very Data'
+  citation: |-
+    Hank Childs, Eric Brugger, Brad Whitlock, Jeremy S Meredith, Sean Ahern, David Pugmire, Kathleen Biagas, Mark C Miller, Cyrus Harrison, Gunther H Weber, Hari Krishnan, Thomas Fogal, Allen R Sanderson, Christoph Garth, E Wes Bethel, David Camp, Oliver Rübel, Marc Durant, Jean M Favre, Paul A Navrátil.
+                 High Performance Visualization, Chapman and Hall/CRC, pp395-410, 2012. DOI:https://doi.org/10.1201/b12985-29.
+  bibtex: '@article{2012, ISBN={9780429105357}, url={http://dx.doi.org/10.1201/b12985-29}, DOI={10.1201/b12985-29}, journal={High Performance Visualization}, publisher={Chapman and Hall/CRC}, year={2012}, month=oct, pages={395–410} }'
+  doi: 10.1201/b12985-29
+- title: Visualization at Extreme Scale Concurrency
+  citation: |-
+    Hank Childs, David Pugmire, Sean Ahern, Brad Whitlock, Mark Howison, Gunther H Weber, E Wes Bethel.
+                High Performance Visualization, Chapman and Hall/CRC, pp329-344, 2012. DOI:https://doi.org/10.1201/b12985-25.
+  bibtex: '@article{2012, ISBN={9780429105357}, url={http://dx.doi.org/10.1201/b12985-25}, DOI={10.1201/b12985-25}, journal={High Performance Visualization}, publisher={Chapman and Hall/CRC}, year={2012}, month=oct, pages={329–344} }'
+  doi: 10.1201/b12985-25
+- title: Parallel Integral Curves
+  citation: |-
+    David Pugmire, Tom Peterka, Christoph Garth.
+                 High Performance Visualization, Chapman and Hall/CRC, pp129-152, 2012. DOI:https://doi.org/10.1201/b12985-16.
+  bibtex: '@article{2012, ISBN={9780429105357}, url={http://dx.doi.org/10.1201/b12985-16}, DOI={10.1201/b12985-16}, journal={High Performance Visualization}, publisher={Chapman and Hall/CRC}, year={2012}, month=oct, pages={129–152} }'
+  doi: 10.1201/b12985-16
+- title: Hybrid Parallelism
+  citation: |-
+    E Wes Bethel, David Camp, Hank Childs, Christoph Garth, Mark Howison, Kenneth I Joy, David Pugmire.
+                 High Performance Visualization, Chapman and Hall/CRC, pp299-328, 2012. DOI:https://doi.org/10.1201/b12985-24.
+  bibtex: '@article{2012, ISBN={9780429105357}, url={http://dx.doi.org/10.1201/b12985-24}, DOI={10.1201/b12985-24}, journal={High Performance Visualization}, publisher={Chapman and Hall/CRC}, year={2012}, month=oct, pages={299–328} }'
+  doi: 10.1201/b12985-24
